# yet_another_manual_map_enhanced

./: .gitignore  CMakeLists.txt
includes/: injector.h  syscalls.h
srcs/: injector.cpp  main.cpp  syscalls.s
